Improved DynDNS plugin